# btran

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  NOTES  README.md  TODO  makeall
example/: Makefile  Makefile.clang  README  amazin.bas  amazin2.cc  kmaze.bas  moon.bas  morgul.bas  revrse.bas  snak.bas  snoopy.bas  superstartrek.bas  trek.bas  unbac.cc  works.bas
lib/: CMakeLists.txt  COPYING  Makefile.am  README  baserr.c  basic_main.cc  basicchannel.cc  basicchannel.h  basicfun.cc  basicfun.h  batof.cc  batof_str.cc_vms  bedit.cc  bstring.cc  bstring.h  bstring_str.cc_vms  bstring_str.h_vms  configure.ac  datalist.h  errorlist.perl  ert.cc  lib$routines.h  lib.cc  libroutines.h  pusing.cc  pusing.h  smg$routines.h  smg.cc  smgdef.h  smgmsg.h  smgroutines.h  virtual.h
src/: CMakeLists.txt  INSTALL  Makefile.am  README  b1filter.cc  basic.h  configure.ac  lex.ll  main.cc  makeall  nodes.h  nodes1.cc  nodes2.cc  nodes3.cc  parse.yy  program.cc  variable.cc  variable.h  varlist.cc  varlist.h  vartype.h  yywrap.c
src2/: CMakeLists.txt  README  ast.cc  ast.h  basic.h  lex.cc  lex.h  lex.ll  nodes.h  nodes2.cc  nodes3.cc  parser.y  program.cc  scanner.l  variable.cc  varlist.cc  varlist.h
