lib_LIBRARIES = libbtran.a
#lib_LTLIBRARIES = libbtran.la

libbtran_a_SOURCES = pusing.cc bstring.cc bedit.cc \
basicchannel.cc basicfun.cc ert.cc \
basicchannel.h basicfun.h bstring.h datalist.h pusing.h \
virtual.h

#libbtran_la_SOURCES = pusing.cc bstring.cc bedit.cc \
#basicchannel.cc basicfun.cc ert.cc \
#basicchannel.h basicfun.h bstring.h datalist.h pusing.h \
#virtual.h


